Task-3/k8s-manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: todo-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: todo-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - todo-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: todo-app-service
            port:
              number: 80
